# awesome-quantum-computing-experiments

./: .gitignore  Gemfile  LICENSE  Makefile  README.md  _config.yml  config.yaml  experiments.html  experiments.md  gen_entangled_error_plot.py  gen_mk_table.py  gen_nkd_plot.py  gen_qubit_count_plot.py  index.html  index.md  index_redirect.html  netlify.toml  pyproject.toml  redirect.html  requirements.txt
.github/workflows/: ci.yml  data-validate.yml  deploy-pages.yml  nightly.yml  plots.yml  pr-highlight-plots.yml  rebuild-pages.yml
_includes/: footer_custom.html  head.html  head_custom.html  metrics_grid.html  plot_scripts.html  plots_grid.html
_layouts/: default.html
_sass/color_schemes/: custom.scss
_sass/custom/: custom.scss
assets/css/: just-the-docs-dark.css  just-the-docs-default.css  just-the-docs-head-nav.css  just-the-docs-light.css  style.scss
assets/js/: data-loader.js  just-the-docs.js  plot-loader.js  responsive-plots.js  search-data.json
data/: entangled_state_error_exp.csv  msd_exp.csv  physical_qubits.csv  qec_exp.csv  qubit_count.csv
docs/: CONTRIBUTING.md  DOCUMENTATION.md
js/: coherence_times_plot.js  entangled_error_plot.js  experiment_counts.js  experiment_counts_yearly.js  msd_error_evolution_plot.js  msd_plot.js  nkd_plot_aggregated.js  qec_cumulative_growth.js  qec_data_qubit_count_plot.js  qec_platform_sunburst.js  qec_timeline_aggregated.js  qubit_count_plot.js
scripts/: build_pr_highlight_comment.py  diff_csv_rows.py  fetch_first_authors.py  run_plot_modules.py
src/: data_schemas.py
tests/: conftest.py  test_diff_csv_rows.py  test_fetch_first_authors.py  test_highlight.py  test_markdown.py  test_plotting.py
(+25 files in other folders)
